--- a/assets/styles/informacoes.css
+++ b/assets/styles/informacoes.css
@@ -37,7 +37,11 @@
     padding: 1em;
     text-align: left;
     align-items: center;
-    
+    justify-content: space-between;
+}
+
+.cards__seta {
+    transform: rotate(-0.25turn);;
 }
 
 .cards__duvidas--titulo {
