--- a/assets/styles/ingresso.css
+++ b/assets/styles/ingresso.css
@@ -52,6 +52,11 @@
   margin-bottom: 2em;
 }
 
+.formulario__info--input:focus {
+  box-shadow: 0 0 0 0;
+  outline: 0;
+}
+
 .botao__avancar {
   color: var(--branco);
   display: flex;
@@ -66,6 +71,13 @@
   font-size: 20px;
   font-weight: 700;
   margin: 0 auto;
+}
+
+.formulario__info--erro {
+  color: var(--vermelho);
+  padding-left: .5em;
+  padding-bottom: .5em;
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
@@ -88,13 +100,21 @@
     width: 20%;
   }
 
+  .ingresso__comprado {
+    display: none;
+  }
+
+  .ingresso__comprar {
+    display: block;
+  }
+
 }
 
 
 @media screen and (min-width: 1360px) {
 
   .banner__ingressos {
-    height: 70vh;
+    height: 80vh;
   }
 
   .formulario {
@@ -119,6 +139,14 @@
 
   #nascimento {
     width: 100%;
+  }
+
+  .botao__avancar:hover {
+    background-color: var(--azul-escuro-hover);
+  }
+
+  .botao__avancar {
+    cursor: pointer;
   }
   
 }
